k8s/senpy-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: trivalent-play
spec:
  replicas: 1
  template:
    metadata:
      labels:
        role: senpy-latest
        app: test
    spec:
      containers:
      - name: trivalent-play
        image: $IMAGEWTAG
        imagePullPolicy: Always
        args:
          - "--default-plugins"
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
          - name: web
            containerPort: 5000
