k8s/trivalentplay-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: trivalent-play
spec:
  replicas: 1
  template:
    metadata:
      labels:
        role: trivalent-latest
        app: test
    spec:
      imagePullSecrets:
      - name: registry.cluster.gsi.dit.upm.es
      containers:
      - name: trivalent-play
        image: registry.cluster.gsi.dit.upm.es/trivalent/trivalent-playground:0.1.4-18-g82ad81c-dirty-python3.5
        imagePullPolicy: Always
        args:
          - "--default-plugins"
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
          - name: web
            containerPort: 5000
