k8s/trivalentplay-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trivalent-play
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
  selector:
    role: senpy-latest
