k8s/senpy-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: senpy-ingress
spec:
  rules:
  - host: trivalent-playground.cluster.gsi.dit.upm.es
    http:
      paths:
      - path: /
        backend:
          serviceName: trivalent-play
          servicePort: 5000
